# JFC

./: .gitignore  .project  CMakeLists.txt  Doxyfile.in  README.md  remove_cruft.sh
include/: JFC.hpp  config_file.hpp  configurationfile.hpp  date_time.hpp  environment.hpp  escape.hpp  file_utilities.hpp  string_utilities.hpp
include/patterns/: command.hpp  design_patterns.hpp  noncopyable.hpp  simple_observer.hpp
src/: CMakeLists.txt  configurationfile.cpp  date_time.cpp  environment.cpp  escape.cpp  file_utilities.cpp  string_utilities.cpp
unit-tests/: CMakeLists.txt  config_file_test.cpp  configurationfile_test.cpp  date_time_test.cpp  environment_test.cpp  escape_test.cpp  file_utilities_test.cpp  simple_observer_test.cpp  string_utilities_test.cpp
